Co-authored-by: TejasIsAmazing <TejasIsCool@users.noreply.github.com>

--- a/index.html
+++ b/index.html
@@ -32,5 +32,21 @@
             <button id="homepage-text-button">Dashboard ➜</button>
         </div>
     </section>
+    <section id="about">
+        <div id="about-left">
+            <h1 id="about-left-heading">We make it simple.</h1>
+            <div id="demo-div">
+                <img id="site-demo" src="/static/imgs/temp_img_demo.gif"> <!-- This will be the website demonstration GIF-->
+                <h3>Our UI is pretty neat too!</h3>
+            </div>
+        </div>
+        <div id="about-right">
+            <h1 id="about-right-heading">ABOUT</h1>
+            <h3 id="about-content">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniamquis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
+            </h3>
+        </div>
+    </section>
+    <section></section>
 </body>
 </html>
