--- a/index.html
+++ b/index.html
@@ -47,6 +47,8 @@
             </h3>
         </div>
     </section>
-    <section></section>
+    <section>
+        
+    </section>
 </body>
 </html>
