Cleaned code and 15 files

--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>File Manager</title>
+    <title>Filorizer - Homepage - Easy to use folder and file management tool</title>
     <link rel="stylesheet" href="/static/stylesheet/styles.css">
     <script src="/static/script/script.js" defer></script>
 </head>
 <body>
     <nav id="navbar">
         <div id="left-nav">
-            <h1 id="website-name">Name</h1>
+            <h1 id="website-name">Filorizer</h1>
         </div>
         <ul id="middle-nav">
             <li><a href="#homepage">HOME</a></li>
@@ -28,7 +28,7 @@
         </div>
         <div id="homepage-text">
             <h1 id="main-description">An intuitive file organisation tool.</h1>
-            <h3 id="small-description">NAME aims to make sorting out folders and files a hassle-free job.</h3>
+            <h3 id="small-description">Filorizer aims to make sorting out folders and files a hassle-free job.</h3>
             <button id="homepage-text-button" onclick="redirect_to_links('Dashboard')">Dashboard ➜</button>
         </div>
     </section>
