--- a/dashboard.html
+++ b/dashboard.html
@@ -4,17 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dashboard</title>
-    <script src="/static/script/dashboard/dashboard_input.js" defer></script>
-    <script src="/static/script/dashboard/dashboard_updaters.js" defer></script>
+    <title>Filorizer - Dashboard - Easy to use folder and file management tool</title>
+    <script src="/static/script/dashboard/globals.js" defer></script>
+    <script src="/static/script/dashboard/input.js" defer></script>
+    <script src="/static/script/dashboard/updaters.js" defer></script>
     <script src="/static/script/dashboard/dashboard_simple_sort.js" defer></script>
-    <script src="/static/script/dashboard/dashboard_subfolder.js" defer></script>
-    <script src="/static/script/dashboard/dashboard_rename.js" defer></script>
+    <script src="/static/script/dashboard/subfolder.js" defer></script>
+    <script src="/static/script/dashboard/rename.js" defer></script>
+    <script src="/static/script/dashboard/runner.js" defer></script>
     <link rel="stylesheet" href="/static/stylesheet/dashboard.css">
     <link rel="stylesheet" href="/static/stylesheet/dashboard/dashboard_tools.css">
     <link rel="stylesheet" href="/static/stylesheet/dashboard/dashboard_folder_info.css">
     <link rel="stylesheet" href="/static/stylesheet/dashboard/dashboard_warning.css">
     <link rel="stylesheet" href="/static/stylesheet/dashboard/dashboard_folder_viewer.css">
+    <link rel="stylesheet" href="/static//stylesheet/dashboard/dashboard_folder_structure.css">
     <link rel="stylesheet" href="/static/stylesheet/dashboard/modals.css">
 </head>
 <body>
@@ -97,6 +100,31 @@
             </div>
         </div>
     </section>
+
+    <section id="folder-structure">
+        <h1 id="folder-structure-title">Output Folder Structure</h1>
+        <!-- This is going to be a list of all files and folders in the selected folder -->
+        <div id="folder-structure-outer-area" class="white-box">
+            <div id="folder-structure-area">
+                <div id="folder-structure-templates">
+                    <div>
+                        Template: 
+                        <select name="templates" id="templates">
+                            <option value="alphabetically">Alphabetically</option>
+                            <option value="time_created">Time Created</option>
+                            <option value="last_modified">Last Modified</option>
+                            <option value="file_type">File Type</option>
+                        </select>
+                    </div>
+                </div>
+                <div id="folder-structure-content">
+                    Yoo
+                </div>
+            </div>
+        </div>
+    </section>
+
+
     <div id="rename-modal" class="modal">
         <div class="modal-content">
             <span id="close-rename-modal" class="close">&times;</span>
